--- a/src/app/components/app.dbentry.html
+++ b/src/app/components/app.dbentry.html
@@ -4,7 +4,7 @@
 	  		<ons-icon icon="ion-navicon, material:md-menu"></ons-icon>
 		</ons-toolbar-button>
   	</div>
-  	<div class="center">{{alertDoc.alert.band}} - {{alertDoc.alert.frequency}} GHz</div>
+  	<div class="center">{{alertDoc.alert.band}} Band - {{alertDoc.alert.frequency}} GHz</div>
   	<div class="right">
 		<ons-toolbar-button (click)="connect()">
 			<ons-icon style="color: red;" icon="fa-link" *ngIf="connected"></ons-icon>
@@ -33,5 +33,8 @@
 	<ons-fab><ons-icon icon="md-plus"></ons-icon></ons-fab>
 	<ons-speed-dial-item (click)="flag()">
   		<ons-icon icon="fa-flag"></ons-icon>
+	</ons-speed-dial-item>
+	<ons-speed-dial-item (click)="map()">
+  		<ons-icon icon="fa-map"></ons-icon>
 	</ons-speed-dial-item>
 </ons-speed-dial>	
