--- a/src/app/components/app.splitter.html
+++ b/src/app/components/app.splitter.html
@@ -1,5 +1,5 @@
 <ons-splitter>
-    <ons-splitter-side [page]="menu" side="left" collapse swipeable width="200px" style="border-right: 1px solid #ccc"></ons-splitter-side>
+    <ons-splitter-side [page]="menu" side="left" animation="reveal" collapse swipeable width="200px" style="border-right: 1px solid #ccc"></ons-splitter-side>
 	<ons-splitter-content [page]="content">
 	</ons-splitter-content>
 </ons-splitter>
